<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Amahi
  ~
  ~ This file is part of Amahi.
  ~
  ~ Amahi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Amahi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Amahi. If not, see <http ://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dip">

        <ImageButton
            android:id="@+id/prev"
            style="@android:style/MediaButton.Previous"
            android:contentDescription="@string/label_previous"/>

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton.Rew"
            android:contentDescription="@string/label_rewind"/>

        <ImageButton
            android:id="@+id/pause"
            style="@android:style/MediaButton.Play"
            android:contentDescription="@string/label_play"/>

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton.Ffwd"
            android:contentDescription="@string/label_forward"/>

        <ImageButton
            android:id="@+id/next"
            style="@android:style/MediaButton.Next"
            android:contentDescription="@string/label_next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingTop="4dip"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/mediacontroller_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dip"
            android:layout_height="32dip"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingTop="4dip"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>